--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -225,7 +225,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="50dp"
                 android:layout_gravity="center"
-                android:text="Cheick"
+                android:text="Check"
                 android:onClick="CalculateNumber"
 
                 />
